Add ReportHandlerBase.java,Trend and SpeseAcquisti